[tool.poetry]
name = "vyper-foundry"
version = "0.1.0"
description = ""
authors = ["danilych <danilych45@proton.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.0"
vyper = "0.4.0"
snekmate = "0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"